# VineCopulas

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_PYPI.md  environment.yml  pyproject.toml  readthedocs.yaml
.github/workflows/: ci.yml  release.yml
doc/: 0_basic_usage.ipynb  bivariatecopulas.ipynb  conf.py  environment.yml  index.rst  sample_data.csv  vinecopulas.ipynb
examples/: bivariate.py  bivariatecopulas copy.ipynb  bivariatecopulas.ipynb  sample_data.csv  vinecopulas copy.ipynb  vinecopulas.ipynb
paper/: paper.bib  paper.md
src/vinecopula/: bivariate.py  marginals.py  vinecopula.py  vinecopulas3.py
src/vinecopulas/: bivariate.py  marginals.py  vinecopula.py
tests/: test_bivariate.py  test_marginals.py  test_vinecopula.py
tests/testdata/: test_random_cop_1_data.csv
